--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "vue": "^3.3.4",
+    "vue": "3.5.13",
     "@tauri-apps/api": "2.1.1",
-    "@tauri-apps/plugin-shell": "^2"
+    "@tauri-apps/plugin-shell": "2.2.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.0.5",
-    "typescript": "^5.2.2",
-    "vite": "^5.3.1",
-    "vue-tsc": "^2.0.22",
-    "@tauri-apps/cli": "^2"
+    "@vitejs/plugin-vue": "5.2.1",
+    "typescript": "5.7.2",
+    "vite": "6.0.5",
+    "vue-tsc": "2.2.0",
+    "@tauri-apps/cli": "2.1.0"
   }
 }
