--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "vue": "3.5.13",
-    "@tauri-apps/api": "2.1.1",
-    "@tauri-apps/plugin-shell": "2.2.0"
+    "@tauri-apps/api": "2.2.0",
+    "@tauri-apps/plugin-shell": "2.2.0",
+    "vue": "3.5.13"
   },
   "devDependencies": {
+    "@tauri-apps/cli": "2.2.4",
     "@vitejs/plugin-vue": "5.2.1",
-    "typescript": "5.7.2",
-    "vite": "6.0.5",
-    "vue-tsc": "2.2.0",
-    "@tauri-apps/cli": "2.1.0"
+    "typescript": "5.7.3",
+    "vite": "6.0.7",
+    "vue-tsc": "2.2.0"
   }
 }
